Document --add-opens requirement for Pellet on Java 16+